updates to home page

--- a/home.html
+++ b/home.html
@@ -1,20 +1,27 @@
-<!DOCTYPE html>
+<!doctype html>
 
-<html class="light" lang="en"><head>
-<meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>AgriSetu Dashboard</title>
-<script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
-<link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&amp;display=swap" rel="stylesheet"/>
-<link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet"/>
-<link rel="stylesheet" href="styles.css"/>
-<script id="tailwind-config">
+<html class="light" lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+    <title>AgriSetu Dashboard</title>
+    <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&amp;display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles.css" />
+    <script id="tailwind-config">
       tailwind.config = {
         darkMode: "class",
         theme: {
           extend: {
             colors: {
-              "primary": "#27AE60",
+              primary: "#27AE60",
               "background-light": "#F2F2F2",
               "background-dark": "#152012",
               "text-primary-light": "#333333",
@@ -27,94 +34,153 @@
               "accent-blue": "#2F80ED",
             },
             fontFamily: {
-              "display": ["Manrope", "sans-serif"]
+              display: ["Manrope", "sans-serif"],
             },
             borderRadius: {
-              "DEFAULT": "0.5rem",
-              "lg": "0.75rem",
-              "xl": "1rem",
-              "full": "9999px",
+              DEFAULT: "0.5rem",
+              lg: "0.75rem",
+              xl: "1rem",
+              full: "9999px",
             },
           },
         },
-      }
+      };
     </script>
-  <script type="module" src="scripts/home/weather_card.js"></script>
+    <script type="module" src="scripts/home/weather_card.js"></script>
   </head>
-<body class="bg-background-light dark:bg-background-dark font-display">
-<div class="relative flex min-h-screen w-full flex-col">
-<!-- Main Content -->
-<main class="flex-1 pb-24">
-<!-- Header -->
+  <body class="bg-background-light dark:bg-background-dark font-display">
+    <div class="relative flex min-h-screen w-full flex-col">
+      <!-- Main Content -->
+      <main class="flex-1 pb-24">
+        <!-- Header -->
 
-<div class="flex items-center gap-3 px-4 py-1">
-  <img src="images/logo.png" alt="AgriSetu logo" class="h-24 w-24 md:h-32 md:w-32 object-contain"/>
-  <h1 class="text-text-primary-light dark:text-text-primary-dark text-4xl md:text-6xl font-extrabold leading-tight tracking-[-0.015em]">AGRISETU</h1>
-</div>
-<!-- Weather Widget -->
-<div class="p-4">
-<div class="flex items-stretch justify-between gap-4 rounded-lg bg-card-light dark:bg-card-dark p-4 shadow-sm">
-<div class="flex flex-[2_2_0px] flex-col gap-1">
-<input type="text" id="city-input" placeholder="Enter city name" class="w-full text-text-primary-light dark:text-text-primary-dark text-lg font-bold leading-tight bg-transparent border-none outline-none placeholder:text-text-secondary-light dark:placeholder:text-text-secondary-dark">
-<div id="weather-display" class="font-display text-text-primary-light dark:text-text-primary-dark text-lg font-bold leading-tight mt-1"></div>
-</div>
-<div class="flex flex-1 items-center justify-center">
-<span id="weather-icon" class="material-symbols-outlined text-6xl text-accent-yellow">sunny</span>
-</div>
-</div>
-</div>
-<!-- Top Recommendation Section -->
-<h3 class="text-text-primary-light dark:text-text-primary-dark px-4 pb-2 pt-4 text-xl font-bold leading-tight tracking-[-0.015em]">Top Recommendation for You</h3>
-<div class="px-4">
-<div class="flex flex-col items-stretch justify-start rounded-lg bg-card-light dark:bg-card-dark shadow-sm overflow-hidden">
-<div class="h-96 w-full bg-cover bg-center bg-no-repeat" data-alt="A lush green field of soybean crops under a clear blue sky" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuCfliFER-BzjVQ5PMZ80loK4Lf8u_KTGMFNjI52jq0uUoQnF4Eye36ifdzzirUkmBn2AknQTR4QhBr8sSGKtd8RLJe9vPVMXtcBhWO6T98OVAjn5Y_9M7JsCyMKgjPhRGAAImMMGOR-f43Q-5wxmK2exH596gxzNWZMCI_eFh1iZyfxPVok4h66FiR1wjzXRrry3h1djDW0hblcfKzI0M5L48HcGTx5TLAGXp0Ir_glaDbK6pvFRVOvLjpNrUxxuFbadVZnEhLngcUC");'></div>
-<div class="flex w-full min-w-72 grow flex-col items-stretch justify-center gap-1 p-4">
-<p class="text-primary text-sm font-semibold leading-normal">Sowing Season: July - August</p>
-<p class="text-text-primary-light dark:text-text-primary-dark text-lg font-bold leading-tight tracking-[-0.015em]">Soybean Crop</p>
-<div class="mt-2 flex items-end justify-between gap-3">
-<div class="flex flex-col gap-1">
-<p class="text-text-secondary-light dark:text-text-secondary-dark text-base font-normal leading-normal">High demand and suitable for your soil type.</p>
-<p class="text-text-secondary-light dark:text-text-secondary-dark text-base font-bold leading-normal">Projected ROI: <span class="text-primary">25%</span></p>
-</div>
-<a href="crop_recommend.html">
-<button class="flex h-10 min-w-[84px] cursor-pointer items-center justify-center overflow-hidden rounded-lg bg-primary px-4 text-sm font-bold leading-normal text-white">
-<span class="truncate">Recommend Crop</span>
-</button>
-</a>
-</div>
-</div>
-</div>
-</div>
+        <div class="flex items-center gap-3 px-4 py-1">
+          <img
+            src="images/logo.png"
+            alt="AgriSetu logo"
+            class="h-24 w-24 md:h-32 md:w-32 object-contain"
+          />
+          <h1
+            class="text-text-primary-light dark:text-text-primary-dark text-4xl md:text-6xl font-extrabold leading-tight tracking-[-0.015em]"
+          >
+            AGRISETU
+          </h1>
+        </div>
+        <!-- Weather Widget -->
+        <div class="p-4">
+          <div
+            class="flex items-stretch justify-between gap-4 rounded-lg bg-card-light dark:bg-card-dark p-4 shadow-sm"
+          >
+            <div class="flex flex-[2_2_0px] flex-col gap-1">
+              <input
+                type="text"
+                id="city-input"
+                placeholder="Enter city name"
+                class="w-full text-text-primary-light dark:text-text-primary-dark text-lg font-bold leading-tight bg-transparent border-none outline-none placeholder:text-text-secondary-light dark:placeholder:text-text-secondary-dark"
+              />
+              <div
+                id="weather-display"
+                class="font-display text-text-primary-light dark:text-text-primary-dark text-lg font-bold leading-tight mt-1"
+              ></div>
+            </div>
+            <div class="flex flex-1 items-center justify-center">
+              <span
+                id="weather-icon"
+                class="material-symbols-outlined text-6xl text-accent-yellow"
+                >sunny</span
+              >
+            </div>
+          </div>
+        </div>
+        <!-- Top Recommendation Section -->
+        <h3
+          class="text-text-primary-light dark:text-text-primary-dark px-4 pb-2 pt-4 text-xl font-bold leading-tight tracking-[-0.015em]"
+        >
+          Top Recommendation for You
+        </h3>
+        <div class="px-4">
+          <div
+            class="flex flex-col items-stretch justify-start rounded-lg bg-card-light dark:bg-card-dark shadow-sm overflow-hidden"
+          >
+            <div
+              class="h-96 w-full bg-cover bg-center bg-no-repeat"
+              data-alt="A lush green field of soybean crops under a clear blue sky"
+              style="
+                background-image: url(&quot;https://lh3.googleusercontent.com/aida-public/AB6AXuCfliFER-BzjVQ5PMZ80loK4Lf8u_KTGMFNjI52jq0uUoQnF4Eye36ifdzzirUkmBn2AknQTR4QhBr8sSGKtd8RLJe9vPVMXtcBhWO6T98OVAjn5Y_9M7JsCyMKgjPhRGAAImMMGOR-f43Q-5wxmK2exH596gxzNWZMCI_eFh1iZyfxPVok4h66FiR1wjzXRrry3h1djDW0hblcfKzI0M5L48HcGTx5TLAGXp0Ir_glaDbK6pvFRVOvLjpNrUxxuFbadVZnEhLngcUC&quot;);
+              "
+            ></div>
+            <div
+              class="flex w-full min-w-72 grow flex-col items-stretch justify-center gap-1 p-4"
+            >
+              <p class="text-primary text-sm font-semibold leading-normal">
+                Sowing Season: July - August
+              </p>
+              <p
+                class="text-text-primary-light dark:text-text-primary-dark text-lg font-bold leading-tight tracking-[-0.015em]"
+              >
+                Soybean Crop
+              </p>
+              <div class="mt-2 flex items-end justify-between gap-3">
+                <div class="flex flex-col gap-1">
+                  <p
+                    class="text-text-secondary-light dark:text-text-secondary-dark text-base font-normal leading-normal"
+                  >
+                    High demand and suitable for your soil type.
+                  </p>
+                  <p
+                    class="text-text-secondary-light dark:text-text-secondary-dark text-base font-bold leading-normal"
+                  >
+                    Projected ROI: <span class="text-primary">25%</span>
+                  </p>
+                </div>
+                <a href="crop_recommend.html">
+                  <button
+                    class="flex h-10 min-w-[84px] cursor-pointer items-center justify-center overflow-hidden rounded-lg bg-primary px-4 text-sm font-bold leading-normal text-white"
+                  >
+                    <span class="truncate">Recommend Crop</span>
+                  </button>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </main>
+      <!-- Bottom Navigation Bar -->
+      <nav
+        class="fixed bottom-0 left-0 right-0 z-20 border-t border-gray-200/50 bg-card-light/80 backdrop-blur-lg dark:border-gray-700/50 dark:bg-card-dark/80"
+      >
+        <div class="mx-auto grid h-16 max-w-lg grid-cols-2 px-4">
+          <a
+            class="group inline-flex flex-col items-center justify-center text-center text-primary"
+            href="home.html"
+          >
+            <span class="material-symbols-outlined">home</span>
+            <span class="text-xs font-bold">Dashboard</span>
+          </a>
 
+          <a
+            class="group inline-flex flex-col items-center justify-center text-center text-text-secondary-light hover:text-primary dark:text-text-secondary-dark dark:hover:text-primary"
+            href="marketplace.html"
+          >
+            <span class="material-symbols-outlined">grass</span>
+            <span class="text-xs font-medium">Marketplace</span>
+          </a>
+        </div>
+      </nav>
+    </div>
 
-</main>
-<!-- Bottom Navigation Bar -->
-<nav class="fixed bottom-0 left-0 right-0 z-20 border-t border-gray-200/50 bg-card-light/80 backdrop-blur-lg dark:border-gray-700/50 dark:bg-card-dark/80">
-<div class="mx-auto grid h-16 max-w-lg grid-cols-2 px-4">
-<a class="group inline-flex flex-col items-center justify-center text-center text-primary" href="home.html">
-<span class="material-symbols-outlined">home</span>
-<span class="text-xs font-bold">Dashboard</span>
-</a>
+    <!-- weather card -->
+    <script type="module" src="scripts/home/weather_card.js"></script>
+    <script type="module">
+      import { weatherCard } from "./scripts/home/weather_card.js";
 
-<a class="group inline-flex flex-col items-center justify-center text-center text-text-secondary-light hover:text-primary dark:text-text-secondary-dark dark:hover:text-primary" href="marketplace.html">
-<span class="material-symbols-outlined">grass</span>
-<span class="text-xs font-medium">Marketplace</span>
-</a>
-
-</nav>
-</div>
-
-<!-- weather card -->
-<script type="module" src="scripts/home/weather_card.js"></script>
-<script type="module">
-import { weatherCard } from './scripts/home/weather_card.js';
-
-const cityInput = document.getElementById('city-input');
-cityInput.addEventListener('input', () => {
-  const city = cityInput.value.trim();
-  if (city) {
-    weatherCard(city);
-  }
-});
-</script>
-</body></html>
+      const cityInput = document.getElementById("city-input");
+      cityInput.addEventListener("input", () => {
+        const city = cityInput.value.trim();
+        if (city) {
+          weatherCard(city);
+        }
+      });
+    </script>
+  </body>
+</html>
