changed id value of all products to string

--- a/marketplace.html
+++ b/marketplace.html
@@ -1,22 +1,29 @@
-<!DOCTYPE html>
+<!doctype html>
 
-<html class="light" lang="en"><head>
-<meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>AgriSetu Marketplace</title>
-<link href="https://fonts.googleapis.com" rel="preconnect"/>
-<link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
-<link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&amp;display=swap" rel="stylesheet"/>
-<link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet"/>
-<link rel="stylesheet" href="styles.css"/>
-<script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
-<script id="tailwind-config">
+<html class="light" lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+    <title>AgriSetu Marketplace</title>
+    <link href="https://fonts.googleapis.com" rel="preconnect" />
+    <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&amp;display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles.css" />
+    <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
+    <script id="tailwind-config">
       tailwind.config = {
         darkMode: "class",
         theme: {
           extend: {
             colors: {
-              "primary": "#27AE60",
+              primary: "#27AE60",
               "background-light": "#f6f8f6",
               "background-dark": "#152012",
               "text-light": "#152012",
@@ -26,115 +33,205 @@
               "muted-light": "#6b7280",
               "muted-dark": "#9ca3af",
               "border-light": "#e5e7eb",
-              "border-dark": "#374151"
+              "border-dark": "#374151",
             },
             fontFamily: {
-              "display": ["Manrope", "sans-serif"]
+              display: ["Manrope", "sans-serif"],
             },
-            borderRadius: {"DEFAULT": "0.25rem", "lg": "0.5rem", "xl": "0.75rem", "full": "9999px"},
+            borderRadius: {
+              DEFAULT: "0.25rem",
+              lg: "0.5rem",
+              xl: "0.75rem",
+              full: "9999px",
+            },
           },
         },
-      }
+      };
     </script>
   </head>
-<body class="bg-background-light dark:bg-background-dark font-display text-text-light dark:text-text-dark">
-<div class="relative flex h-auto min-h-screen w-full flex-col group/design-root overflow-x-hidden">
-<!-- Sidebar -->
-<div id="sidebar" class="fixed left-0 top-0 h-screen w-64 bg-surface-light dark:bg-surface-dark shadow-lg transform -translate-x-full transition-transform duration-300 z-30 flex flex-col">
-  <div class="flex items-center justify-between p-4 border-b border-border-light dark:border-border-dark">
-  <h3 class="text-lg font-bold text-text-light dark:text-text-dark">Menu</h3>
-  <button onclick="toggleSidebar()" class="text-text-light dark:text-text-dark">
-  <span class="material-symbols-outlined">close</span>
-  </button>
-  </div>
-    <nav class="flex-1 p-3 space-y-2">
-    <a href="home.html" class="flex items-center gap-3 px-4 py-3 rounded-lg text-text-light dark:text-text-dark hover:bg-primary/20 transition-colors">
-    <span class="material-symbols-outlined">home</span>
-    <span>Dashboard</span>
-    </a>
-    <a href="Farmer_order_manag.html" class="flex items-center gap-3 px-4 py-3 rounded-lg text-text-light dark:text-text-dark hover:bg-primary/20 transition-colors">
-    <span class="material-symbols-outlined">grass</span>
-    <span>My Crops</span>
-    </a>
-    <a href="product_listing.html" class="flex items-center gap-3 px-4 py-3 rounded-lg text-text-light dark:text-text-dark hover:bg-primary/20 transition-colors">
-    <span class="material-symbols-outlined">shopping_bag</span>
-    <span>Add product</span>
-    </a>
-    </nav>
-</div>
-<!-- Sidebar Overlay -->
-<div id="sidebarOverlay" class="fixed inset-0 bg-black/50 hidden z-20" onclick="toggleSidebar()"></div>
-<div class="sticky top-0 z-10 flex flex-col bg-background-light/80 dark:bg-background-dark/80 backdrop-blur-sm">
-<!-- TopAppBar -->
-<div class="flex items-center p-4 pb-2 justify-between">
-<button onclick="toggleSidebar()" class="text-text-light dark:text-text-dark flex size-10 shrink-0 items-center justify-center rounded-full hover:bg-gray-200 dark:hover:bg-gray-700 transition-colors cursor-pointer">
-<span class="material-symbols-outlined">menu</span>
-</button>
-<h2 class="text-lg font-bold leading-tight tracking-[-0.015em] flex-1 text-center text-text-light dark:text-text-dark">Marketplace</h2>
-<div class="flex w-12 items-center justify-end">
-<a href="checkout.html">
-<button class="flex max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-full h-10 w-10 bg-transparent text-text-light dark:text-text-dark gap-2 text-base font-bold leading-normal tracking-[0.015em] min-w-0 p-0 relative">
-<span class="material-symbols-outlined text-2xl">shopping_cart</span>
-<div class="absolute top-1 right-1 flex h-4 w-4 items-center justify-center rounded-full bg-primary text-xs font-bold text-white">2</div>
-</button>
-</a>
-</div>
-</div>
-<!-- SearchBar -->
-<div class="px-4 py-3">
-<label class="flex flex-col min-w-40 h-12 w-full">
-<div class="flex w-full flex-1 items-stretch rounded-xl h-full border border-border-light dark:border-border-dark bg-surface-light dark:bg-surface-dark">
-<div class="text-muted-light dark:text-muted-dark flex items-center justify-center pl-4">
-<span class="material-symbols-outlined text-2xl">search</span>
-</div>
-<input class="form-input flex w-full min-w-0 flex-1 resize-none overflow-hidden text-text-light dark:text-text-dark focus:outline-0 focus:ring-0 border-none bg-transparent h-full placeholder:text-muted-light dark:placeholder:text-muted-dark px-2 text-base font-normal leading-normal" placeholder="Search by crop" value=""/>
-</div>
-</label>
-</div>
-<!-- Chips -->
-<div class="flex gap-3 px-4 pb-4 overflow-x-auto">
-<button class="flex h-10 shrink-0 items-center justify-center gap-x-2 rounded-lg bg-surface-light dark:bg-surface-dark pl-4 pr-3 border border-border-light dark:border-border-dark">
-<p class="text-text-light dark:text-text-dark text-sm font-medium leading-normal">Category</p>
-<span class="material-symbols-outlined text-muted-light dark:text-muted-dark text-xl">expand_more</span>
-</button>
-<button class="flex h-10 shrink-0 items-center justify-center gap-x-2 rounded-lg bg-surface-light dark:bg-surface-dark pl-4 pr-3 border border-border-light dark:border-border-dark">
-<p class="text-text-light dark:text-text-dark text-sm font-medium leading-normal">Price</p>
-<span class="material-symbols-outlined text-muted-light dark:text-muted-dark text-xl">expand_more</span>
-</button>
-<button class="flex h-10 shrink-0 items-center justify-center gap-x-2 rounded-lg bg-primary/20 text-primary pl-4 pr-3 border border-primary/30">
-<p class="text-primary text-sm font-medium leading-normal">Sort By: Popular</p>
-<span class="material-symbols-outlined text-primary text-xl">expand_more</span>
-</button>
-</div>
-</div>
-<main class="flex-grow pb-24">
-<!-- ImageGrid -->
-<div class="grid grid-cols-[repeat(auto-fit,minmax(158px,1fr))] gap-4 p-4 js-products-grid">
-</div>
-</main>
- <!-- Bottom Navigation Bar -->
-<nav class="fixed bottom-0 left-0 right-0 z-20 border-t border-gray-200/50 bg-card-light/80 backdrop-blur-lg dark:border-gray-700/50 dark:bg-card-dark/80">
-<div class="mx-auto grid h-16 max-w-lg grid-cols-2 px-4">
-<a class="group inline-flex flex-col items-center justify-center text-center text-primary" href="home.html">
-<span class="material-symbols-outlined">home</span>
-<span class="text-xs font-bold">Dashboard</span>
-</a>
-<a class="group inline-flex flex-col items-center justify-center text-center text-text-secondary-light hover:text-primary dark:text-text-secondary-dark dark:hover:text-primary" href="buyer_order_tracking.html">
-<span class="material-symbols-outlined">grass</span>
-<span class="text-xs font-medium">Purchased Orders</span>
-</a>
+  <body
+    class="bg-background-light dark:bg-background-dark font-display text-text-light dark:text-text-dark"
+  >
+    <div
+      class="relative flex h-auto min-h-screen w-full flex-col group/design-root overflow-x-hidden"
+    >
+      <!-- Sidebar -->
+      <div
+        id="sidebar"
+        class="fixed left-0 top-0 h-screen w-64 bg-surface-light dark:bg-surface-dark shadow-lg transform -translate-x-full transition-transform duration-300 z-30 flex flex-col"
+      >
+        <div
+          class="flex items-center justify-between p-4 border-b border-border-light dark:border-border-dark"
+        >
+          <h3 class="text-lg font-bold text-text-light dark:text-text-dark">
+            Menu
+          </h3>
+          <button
+            onclick="toggleSidebar()"
+            class="text-text-light dark:text-text-dark"
+          >
+            <span class="material-symbols-outlined">close</span>
+          </button>
+        </div>
+        <nav class="flex-1 p-3 space-y-2">
+          <a
+            href="home.html"
+            class="flex items-center gap-3 px-4 py-3 rounded-lg text-text-light dark:text-text-dark hover:bg-primary/20 transition-colors"
+          >
+            <span class="material-symbols-outlined">home</span>
+            <span>Dashboard</span>
+          </a>
+          <a
+            href="Farmer_order_manag.html"
+            class="flex items-center gap-3 px-4 py-3 rounded-lg text-text-light dark:text-text-dark hover:bg-primary/20 transition-colors"
+          >
+            <span class="material-symbols-outlined">grass</span>
+            <span>My Crops</span>
+          </a>
+          <a
+            href="product_listing.html"
+            class="flex items-center gap-3 px-4 py-3 rounded-lg text-text-light dark:text-text-dark hover:bg-primary/20 transition-colors"
+          >
+            <span class="material-symbols-outlined">shopping_bag</span>
+            <span>Add product</span>
+          </a>
+        </nav>
+      </div>
+      <!-- Sidebar Overlay -->
+      <div
+        id="sidebarOverlay"
+        class="fixed inset-0 bg-black/50 hidden z-20"
+        onclick="toggleSidebar()"
+      ></div>
+      <div
+        class="sticky top-0 z-10 flex flex-col bg-background-light/80 dark:bg-background-dark/80 backdrop-blur-sm"
+      >
+        <!-- TopAppBar -->
+        <div class="flex items-center p-4 pb-2 justify-between">
+          <button
+            onclick="toggleSidebar()"
+            class="text-text-light dark:text-text-dark flex size-10 shrink-0 items-center justify-center rounded-full hover:bg-gray-200 dark:hover:bg-gray-700 transition-colors cursor-pointer"
+          >
+            <span class="material-symbols-outlined">menu</span>
+          </button>
+          <h2
+            class="text-lg font-bold leading-tight tracking-[-0.015em] flex-1 text-center text-text-light dark:text-text-dark"
+          >
+            Marketplace
+          </h2>
+          <div class="flex w-12 items-center justify-end">
+            <a href="checkout.html">
+              <button
+                class="flex max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-full h-10 w-10 bg-transparent text-text-light dark:text-text-dark gap-2 text-base font-bold leading-normal tracking-[0.015em] min-w-0 p-0 relative"
+              >
+                <span class="material-symbols-outlined text-2xl"
+                  >shopping_cart</span
+                >
+                <div
+                  class="absolute top-1 right-1 flex h-4 w-4 items-center justify-center rounded-full bg-primary text-xs font-bold text-white"
+                >
+                  2
+                </div>
+              </button>
+            </a>
+          </div>
+        </div>
+        <!-- SearchBar -->
+        <div class="px-4 py-3">
+          <label class="flex flex-col min-w-40 h-12 w-full">
+            <div
+              class="flex w-full flex-1 items-stretch rounded-xl h-full border border-border-light dark:border-border-dark bg-surface-light dark:bg-surface-dark"
+            >
+              <div
+                class="text-muted-light dark:text-muted-dark flex items-center justify-center pl-4"
+              >
+                <span class="material-symbols-outlined text-2xl">search</span>
+              </div>
+              <input
+                class="form-input flex w-full min-w-0 flex-1 resize-none overflow-hidden text-text-light dark:text-text-dark focus:outline-0 focus:ring-0 border-none bg-transparent h-full placeholder:text-muted-light dark:placeholder:text-muted-dark px-2 text-base font-normal leading-normal"
+                placeholder="Search by crop"
+                value=""
+              />
+            </div>
+          </label>
+        </div>
+        <!-- Chips -->
+        <div class="flex gap-3 px-4 pb-4 overflow-x-auto">
+          <button
+            class="flex h-10 shrink-0 items-center justify-center gap-x-2 rounded-lg bg-surface-light dark:bg-surface-dark pl-4 pr-3 border border-border-light dark:border-border-dark"
+          >
+            <p
+              class="text-text-light dark:text-text-dark text-sm font-medium leading-normal"
+            >
+              Category
+            </p>
+            <span
+              class="material-symbols-outlined text-muted-light dark:text-muted-dark text-xl"
+              >expand_more</span
+            >
+          </button>
+          <button
+            class="flex h-10 shrink-0 items-center justify-center gap-x-2 rounded-lg bg-surface-light dark:bg-surface-dark pl-4 pr-3 border border-border-light dark:border-border-dark"
+          >
+            <p
+              class="text-text-light dark:text-text-dark text-sm font-medium leading-normal"
+            >
+              Price
+            </p>
+            <span
+              class="material-symbols-outlined text-muted-light dark:text-muted-dark text-xl"
+              >expand_more</span
+            >
+          </button>
+          <button
+            class="flex h-10 shrink-0 items-center justify-center gap-x-2 rounded-lg bg-primary/20 text-primary pl-4 pr-3 border border-primary/30"
+          >
+            <p class="text-primary text-sm font-medium leading-normal">
+              Sort By: Popular
+            </p>
+            <span class="material-symbols-outlined text-primary text-xl"
+              >expand_more</span
+            >
+          </button>
+        </div>
+      </div>
+      <main class="flex-grow pb-24">
+        <!-- ImageGrid -->
+        <div
+          class="grid grid-cols-[repeat(auto-fit,minmax(158px,1fr))] gap-4 p-4 js-products-grid"
+        ></div>
+      </main>
+      <!-- Bottom Navigation Bar -->
+      <nav
+        class="fixed bottom-0 left-0 right-0 z-20 border-t border-gray-200/50 bg-card-light/80 backdrop-blur-lg dark:border-gray-700/50 dark:bg-card-dark/80"
+      >
+        <div class="mx-auto grid h-16 max-w-lg grid-cols-2 px-4">
+          <a
+            class="group inline-flex flex-col items-center justify-center text-center text-primary"
+            href="home.html"
+          >
+            <span class="material-symbols-outlined">home</span>
+            <span class="text-xs font-bold">Dashboard</span>
+          </a>
+          <a
+            class="group inline-flex flex-col items-center justify-center text-center text-text-secondary-light hover:text-primary dark:text-text-secondary-dark dark:hover:text-primary"
+            href="buyer_order_tracking.html"
+          >
+            <span class="material-symbols-outlined">grass</span>
+            <span class="text-xs font-medium">Purchased Orders</span>
+          </a>
+        </div>
+      </nav>
+    </div>
+    <script>
+      function toggleSidebar() {
+        const sidebar = document.getElementById("sidebar");
+        const overlay = document.getElementById("sidebarOverlay");
+        sidebar.classList.toggle("-translate-x-full");
+        overlay.classList.toggle("hidden");
+      }
+    </script>
 
-</div>
-</nav>
-</div>
-<script>
-function toggleSidebar() {
-  const sidebar = document.getElementById('sidebar');
-  const overlay = document.getElementById('sidebarOverlay');
-  sidebar.classList.toggle('-translate-x-full');
-  overlay.classList.toggle('hidden');
-}
-</script>
-
-<script type = 'module' src = 'scripts/marketplace/marketplace.js'></script>
-</body></html>
+    <script type="module" src="scripts/marketplace/marketplace.js"></script>
+  </body>
+</html>
