--- a/checkout.html
+++ b/checkout.html
@@ -105,7 +105,7 @@
       </header>
       <main class="flex-1 py-8 px-4 md:px-8">
         <div class="max-w-7xl mx-auto grid grid-cols-1 lg:grid-cols-12 gap-8">
-          <!-- Left Column: Cart Items and GST -->
+          <!-- Left Column: Cart Items -->
           <div class="lg:col-span-8 space-y-6">
             <div
               class="bg-white dark:bg-slate-900 rounded-2xl border border-slate-200 dark:border-slate-800 shadow-sm overflow-hidden"
