--- a/marketplace.html
+++ b/marketplace.html
@@ -128,9 +128,9 @@
                   >shopping_cart</span
                 >
                 <div
-                  class="absolute top-1 right-1 flex h-4 w-4 items-center justify-center rounded-full bg-primary text-xs font-bold text-white"
+                  class="absolute top-1 right-1 flex h-4 w-4 items-center justify-center rounded-full bg-primary text-xs font-bold text-white js-cart-quantity"
                 >
-                  2
+                  0
                 </div>
               </button>
             </a>
@@ -223,6 +223,7 @@
         </div>
       </nav>
     </div>
+
     <script>
       function toggleSidebar() {
         const sidebar = document.getElementById("sidebar");
