--- a/marketplace.html
+++ b/marketplace.html
@@ -233,6 +233,6 @@
       }
     </script>
 
-    <script type="module" src="scripts/marketplace/marketplace.js"></script>
+    <script type="module" src="scripts/marketplace.js"></script>
   </body>
 </html>
